--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
   },
-  "author": "Ammar Khaled Noor",
+  "author": "Mahmoud Ashraf Mahmoud",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.2.0",
